# binomial

./: CMakeLists.txt
include/: binomial.h
src/: main.c
